// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dependency-side-bar 1`] = `

<div class="bg-background-secondary flex w-full flex-col gap-px rounded rounded-b-none pb-px">
  <gui-filter-list-empty-state>
  </gui-filter-list-empty-state>
  <div class="bg-background flex flex-col gap-4 rounded px-6 py-3">
    <gui-side-item
      item="GridItemData { @vltpkg/semver }"
      dependencies="true"
    >
    </gui-side-item>
    <gui-side-item
      item="GridItemData { abbrev }"
      dependencies="true"
    >
    </gui-side-item>
    <gui-side-item
      item="GridItemData { simple-output }"
      dependencies="true"
    >
    </gui-side-item>
  </div>
  <gui-dependency-empty-state>
  </gui-dependency-empty-state>
</div>

`;

exports[`dependency-side-bar has both installed and uninstalled deps 1`] = `

<div class="bg-background-secondary flex w-full flex-col gap-px rounded rounded-b-none pb-px">
  <gui-filter-list-empty-state>
  </gui-filter-list-empty-state>
  <div class="bg-background flex flex-col gap-4 rounded px-6 py-3">
    <gui-side-item
      item="GridItemData { @vltpkg/semver }"
      dependencies="true"
    >
    </gui-side-item>
    <gui-side-item
      item="GridItemData { abbrev }"
      dependencies="true"
    >
    </gui-side-item>
    <gui-side-item
      item="GridItemData { simple-output }"
      dependencies="true"
    >
    </gui-side-item>
  </div>
  <gui-dependency-empty-state>
  </gui-dependency-empty-state>
  <div class="flex flex-col gap-px">
    <div class="bg-background flex h-12 w-full items-center rounded px-6">
      <h3 class="text-muted-foreground text-sm font-medium">
        Uninstalled Dependencies
      </h3>
    </div>
    <div class="bg-background flex flex-col gap-4 rounded px-6 py-3">
      <gui-side-item
        item="GridItemData { @ruyadorno/redact }"
        dependencies="false"
      >
      </gui-side-item>
      <gui-side-item
        item="GridItemData { ntl }"
        dependencies="false"
      >
      </gui-side-item>
    </div>
  </div>
</div>

`;

exports[`dependency-side-bar has uninstalled deps only 1`] = `

<div class="bg-background-secondary flex w-full flex-col gap-px rounded rounded-b-none pb-px">
  <gui-filter-list-empty-state>
  </gui-filter-list-empty-state>
  <div class="bg-background flex flex-col gap-4 rounded px-6 py-3">
    <gui-side-item
      item="GridItemData { @vltpkg/semver }"
      dependencies="true"
    >
    </gui-side-item>
    <gui-side-item
      item="GridItemData { abbrev }"
      dependencies="true"
    >
    </gui-side-item>
    <gui-side-item
      item="GridItemData { simple-output }"
      dependencies="true"
    >
    </gui-side-item>
  </div>
  <gui-dependency-empty-state>
  </gui-dependency-empty-state>
  <div class="flex flex-col gap-px">
    <div class="bg-background flex h-12 w-full items-center rounded px-6">
      <h3 class="text-muted-foreground text-sm font-medium">
        Uninstalled Dependencies
      </h3>
    </div>
    <div class="bg-background flex flex-col gap-4 rounded px-6 py-3">
      <gui-side-item
        item="GridItemData { @vltpkg/semver }"
        dependencies="false"
      >
      </gui-side-item>
      <gui-side-item
        item="GridItemData { abbrev }"
        dependencies="false"
      >
      </gui-side-item>
      <gui-side-item
        item="GridItemData { simple-output }"
        dependencies="false"
      >
      </gui-side-item>
    </div>
  </div>
</div>

`;

exports[`dependency-side-bar no items 1`] = `

<div class="bg-background-secondary flex w-full flex-col gap-px rounded rounded-b-none pb-px">
  <gui-filter-list-empty-state>
  </gui-filter-list-empty-state>
  <div class="bg-background flex flex-col gap-4 rounded px-6 py-3">
  </div>
  <gui-dependency-empty-state>
  </gui-dependency-empty-state>
</div>

`;
